--- a/index.html
+++ b/index.html
@@ -218,6 +218,9 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
+
+                        <div class="row g-4">
                             <div class="col-6">
                                 <div class="d-flex align-items-center">
                                     <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-light" style="width: 55px; height: 55px;">
