--- a/casella.html
+++ b/casella.html
@@ -167,7 +167,7 @@
                             </div>
                         </div>
                         <div class="team-text bg-light text-center p-4">
-                            <h5>Sampling Pump</h5>
+                            <h5>Air Sampling Pump</h5>
                            
                         </div>
                     </div>
@@ -195,7 +195,7 @@
                             </div>
                         </div>
                         <div class="team-text bg-light text-center p-4">
-                            <h5>Fixed (Sound –Dust )</h5>
+                            <h5>Fixed (Sound – Dust - Vibration )</h5>
                             
                         </div>
                     </div>
