--- a/casellaproducts.html
+++ b/casellaproducts.html
@@ -191,7 +191,7 @@
                             </div>
                         </div>
                         <div class="team-text bg-light text-center p-4">
-                            <h5>Fixed (Sound –Dust )</h5>
+                            <h5>Fixed (Sound – Dust - Vibration )</h5>
                             
                         </div>
                     </div>
