--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
                         </div>
                     </div>
                     <div class="owl-carousel-item position-relative">
-                        <img class="img-fluid" src="img/WhatsApp Image 2024-02-05 at 11.59.04 AM.jpeg" alt="">
+                        <img class="img-fluid" src="img/1.jpg" alt="">
                         <div class="owl-carousel-text">
-                            <h1 class="display-1 text-white mb-0"> </h1>
+                            <h1 class="display-1 text-white mb-0"></h1>
                         </div>
                     </div>
                     <div class="owl-carousel-item position-relative">
@@ -144,7 +144,7 @@
                         </div>
                     </div>
                     <div class="owl-carousel-item position-relative">
-                        <img class="img-fluid" src="img/IMG-20240205-WA0021.jpg" alt="">
+                        <img class="img-fluid" src="img/2.jpg" alt="">
                         <div class="owl-carousel-text">
                             <h1 class="display-1 text-white mb-0"></h1>
                         </div>
