--- a/service.html
+++ b/service.html
@@ -176,7 +176,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="service-item bg-light rounded h-100 p-5" style=" position: relative;color: #ffffff; background-image: url('img/61TCrbUtCYL.jpg');background-size: cover;background-position: center;">
+                    <div class="service-item bg-light rounded h-100 p-5" style=" position: relative;color: #ffffff; background-image: url('img/3.jpg');background-size: cover;background-position: center;">
                         <!-- Overlay for improving text readability -->
                         <div style="position: absolute;top: 0;left: 0;right: 0;bottom: 0;background: rgba(0, 0, 0, 0.4); /* Adjust transparency as needed */border-radius: 15px;z-index: 0;">
                         </div>
@@ -249,7 +249,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="service-item bg-light rounded h-100 p-5" style="position: relative;color: #ffffff;background-image: url('img/calibration_temperature-2.jpg');background-size: cover;background-position: center;">
+                    <div class="service-item bg-light rounded h-100 p-5" style="position: relative;color: #ffffff;background-image: url('img/5.jpg');background-size: cover;background-position: center;">
                         <!-- Overlay for improving text readability -->
                         <div style="position: absolute;top: 0;left: 0;right: 0;bottom: 0;background: rgba(0, 0, 0, 0.4); /* Adjust transparency as needed */border-radius: 15px;z-index: 0;">
                         </div>
