--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                 <h1>Companies</h1>
             </div>
             <div class="row g-4">
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s" onclick="location.href='ecom.html';" style="cursor: pointer;">
                     <div class="service-item bg-light rounded h-100 p-5" style="position: relative; color: #ffffff; background-image: url('img/EASY-DE-1-e1491479911670.jpg'); background-size: cover; background-position: center;">
 
                         <div style="position: absolute;top: 0;left: 0;right: 0;bottom: 0;background: rgba(0, 0, 0, 0.4); border-radius: 15px;z-index: 0;">
@@ -345,10 +345,10 @@
                         <!-- Ensure content goes here, and z-index is used for layering -->
                         <div style="position: relative; z-index: 1;">
                             <div class="d-inline-flex align-items-center justify-content-center bg-white rounded-circle mb-4" style="width: 65px; height: 65px; overflow: hidden;">
-                                <img src="img/download (1).jpg" alt="Description" style="height: 100%; width: auto; min-width: 100%; position: relative; left: 50%; transform: translateX(-50%);">
+                                <img  src="img/download (1).jpg" alt="Description" style="height: 100%; width: auto; min-width: 100%; position: relative; left: 50%; transform: translateX(-50%);">
                             </div>
 
-                            <h4 class="mb-4" style="color: #ffffff; ">Ecom</h4>
+                            <h4 class="mb-4" style="color: #ffffff; ">Ecom - Flue Gas Analyzers</h4>
                             <a class="btn" href="ecom.html"><i class="fa fa-plus text-primary me-3"></i>Read More</a>
 
                         </div>
@@ -356,7 +356,7 @@
 
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s" onclick="location.href='casella.html';" style="cursor: pointer;">
                     <div class="service-item bg-light rounded h-100 p-5" style=" position: relative; color: #ffffff; background-image: url('img/branding-familyproduct-hero.jpg'); background-size: cover; background-position: center;">
                         <!-- Overlay for improving text readability -->
                         <div style="position: absolute;top: 0;left: 0;right: 0;bottom: 0;background: rgba(0, 0, 0, 0.4); /* Adjust transparency as needed */border-radius: 15px;z-index: 0;">
@@ -368,7 +368,7 @@
                                 <img src="img/casella-new-green-grad-min.jpg" alt="Description" style="height: 100%; width: auto; min-width: 100%; position: relative; left: 50%; transform: translateX(-50%);">
                             </div>
 
-                            <h4 class="mb-4" style="color: #ffffff; ">Casella</h4>
+                            <h4 class="mb-4" style="color: #ffffff; ">Casella - Air Quality Monitors</h4>
                             <a class="btn" href="casella.html"><i class="fa fa-plus text-primary me-3"></i>Read More</a>
 
                         </div>
@@ -376,7 +376,7 @@
 
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s" onclick="location.href='aeroqaul.html';" style="cursor: pointer;">
                     <div class="service-item bg-light rounded h-100 p-5" style="position: relative; color: #ffffff; background-image: url('img/Aeroqual-Ozone-O3-Sensor-Heads.jpg'); background-size: cover; background-position: center;">
 
                         <div style="position: absolute;top: 0;left: 0;right: 0;bottom: 0;background: rgba(0, 0, 0, 0.4); border-radius: 15px;z-index: 0;">
@@ -388,7 +388,7 @@
                                 <img src="img/Aeroqual_1-logo.jpg" alt="Description" style="height: 100%; width: auto; min-width: 100%; position: relative; left: 50%; transform: translateX(-50%);">
                             </div>
 
-                            <h4 class="mb-4" style="color: #ffffff; ">Aeroqual</h4>
+                            <h4 class="mb-4" style="color: #ffffff; ">Aeroqual - Air Quality Monitors</h4>
                             <a class="btn" href="aeroqaul.html"><i class="fa fa-plus text-primary me-3"></i>Read More</a>
 
                         </div>
