--- a/index.html
+++ b/index.html
@@ -88,8 +88,9 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0 wow fadeIn" data-wow-delay="0.1s">
         <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-            <img src="img\alnada.png" alt="Logo" style="width: 150px; height: auto;">
+            <img src="img/alnada.png" alt="Logo" class="logo">
         </a>
+        
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -126,9 +127,27 @@
                         </div>
                     </div>
                     <div class="owl-carousel-item position-relative">
+                        <img class="img-fluid" src="img/AF.jpg" alt="">
+                        <div class="owl-carousel-text">
+                            <h1 class="display-1 text-white mb-0"> </h1>
+                        </div>
+                    </div>
+                    <div class="owl-carousel-item position-relative">
+                        <img class="img-fluid" src="img/AQ1.jpg" alt="">
+                        <div class="owl-carousel-text">
+                            <h1 class="display-1 text-white mb-0"> </h1>
+                        </div>
+                    </div>
+                    <div class="owl-carousel-item position-relative">
                         <img class="img-fluid" src="img/1.jpg" alt="">
                         <div class="owl-carousel-text">
                             <h1 class="display-1 text-white mb-0"></h1>
+                        </div>
+                    </div>
+                    <div class="owl-carousel-item position-relative">
+                        <img class="img-fluid" src="img/AQ2.jpg" alt="">
+                        <div class="owl-carousel-text">
+                            <h1 class="display-1 text-white mb-0"> </h1>
                         </div>
                     </div>
                     <div class="owl-carousel-item position-relative">
